updated maven-compiler-plugin.version to 3.1 * partly moved to maven source 1.8 (java 8) * using diamond operators heavily * moved toStr, isEmpty, remove, toArray, distinct, contains and equals methods to SSStrU from SSEntityA and sub classes * fixed SSStrU methods (removed unused ones as well) * fixed addDistinct in SSEntityA sub classes * provided a isXX method for instantiations of SSEntityA sub classes to avoid necessary checks in get methods * further re-factored service callings via SSServCaller to uncouple services (-datatypes)